all sorts of stuff

--- a/locale/de/LoadedTurrets.cfg
+++ b/locale/de/LoadedTurrets.cfg
@@ -18,7 +18,7 @@ loaded-turret=Ein __1__ geladen mit __2__
 [item-limitation]
 
 [item-group-name]
-filled-turrets=Geladene Geschütztürme
+LoadedTurrets-filled-turrets=Geladene Geschütztürme
 
 [item-name]
 loaded-turret=__1__ (mit __2__)
